--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -4,14 +4,13 @@
 			<mat-icon>home</mat-icon>
 		</button>
 		<span>Журнал проезда</span>
-		<span class="example-spacer"></span> <button (click)="createProduct()" mat-button color="accent">Добавить
-			авто</button>
+		<span class="example-spacer"></span> <button (click)="createProduct()" mat-button color="accent">Додати авто</button>
 	</mat-toolbar>
 </div>
 
 <div class="container">
 	<mat-form-field>
-		<mat-label>Фильтр данных</mat-label>
+		<mat-label>Пошук</mat-label>
 		<input matInput (keyup)="applyFilter($event)" placeholder="Поиск" #input>
 	</mat-form-field>
 	<div class="mat-elevation-z8">
@@ -31,18 +30,18 @@
 				<td mat-cell *matCellDef="let row"> {{row.appointment}} </td>
 			</ng-container>
 
-			<ng-container matColumnDef="date">
-				<th mat-header-cell *matHeaderCellDef mat-sort-header>Дата та час</th>
-				<td mat-cell *matCellDef="let row"> {{row.date | date: "dd.MM.yyyy"}} </td>
+			<ng-container matColumnDef="comeDate">
+				<th mat-header-cell *matHeaderCellDef mat-sort-header>Дата заїзду</th>
+				<td mat-cell *matCellDef="let row"> {{row.comeDate | date: "dd.MM.yyyy"}} </td>
 			</ng-container>
 
-			<ng-container matColumnDef="date">
-				<th mat-header-cell *matHeaderCellDef mat-sort-header>Дата та час</th>
-				<td mat-cell *matCellDef="let row"> {{row.date | date: "dd.MM.yyyy"}} </td>
+			<ng-container matColumnDef="outDate">
+				<th mat-header-cell *matHeaderCellDef mat-sort-header>Дата виїзду</th>
+				<td mat-cell *matCellDef="let row"> {{row.outDate | date: "dd.MM.yyyy"}} </td>
 			</ng-container>
 
 			<ng-container matColumnDef="actions">
-				<th mat-header-cell *matHeaderCellDef mat-sort-header>Действия</th>
+				<th mat-header-cell *matHeaderCellDef mat-sort-header>Редагувати/Видалити</th>
 				<td mat-cell *matCellDef="let row">
 					<button color="primary" mat-icon-button (click)="updateProduct(row)">
 						<mat-icon>edit</mat-icon>
