--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -57,6 +57,6 @@
 						<td class="mat-cell" colspan="4">Данные по фильтру "{{input.value}}" не найдены </td>
 					</tr>
 					</table>
-					<mat-paginator [pageSizeOptions]="[5, 10, 25, 100]" aria-label="Select page of users"></mat-paginator>
+					<mat-paginator [pageSizeOptions]="[25, 50, 100]" aria-label="Select page of users"></mat-paginator>
 					</div>
 		</div>
