--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -11,10 +11,11 @@
 <div class="container">
 	<mat-form-field>
 		<mat-label>Пошук</mat-label>
-		<input matInput (keyup)="applyFilter($event)" placeholder="Поиск" #input>
+		<input matInput (keydown)="applyFilter($event)" placeholder="Пошук" #input>
 	</mat-form-field>
 	<div class="mat-elevation-z8">
 		<table mat-table [dataSource]="dataSource" matSort>
+			
 			<ng-container matColumnDef="sign">
 				<th mat-header-cell *matHeaderCellDef mat-sort-header>Номер</th>
 				<td mat-cell *matCellDef="let row"> {{row.sign}} </td>
@@ -31,13 +32,23 @@
 			</ng-container>
 
 			<ng-container matColumnDef="comeDate">
-				<th mat-header-cell *matHeaderCellDef mat-sort-header>Дата заїзду</th>
+				<th mat-header-cell *matHeaderCellDef mat-sort-header>Дата в'їзду</th>
 				<td mat-cell *matCellDef="let row"> {{row.comeDate | date: "dd.MM.yyyy"}} </td>
+			</ng-container>
+
+			<ng-container matColumnDef="comeTime">
+				<th mat-header-cell *matHeaderCellDef mat-sort-header>Час в'їзду</th>
+				<td mat-cell *matCellDef="let row"> {{row.comeTime}} </td>
 			</ng-container>
 
 			<ng-container matColumnDef="outDate">
 				<th mat-header-cell *matHeaderCellDef mat-sort-header>Дата виїзду</th>
 				<td mat-cell *matCellDef="let row"> {{row.outDate | date: "dd.MM.yyyy"}} </td>
+			</ng-container>
+
+			<ng-container matColumnDef="outTime">
+				<th mat-header-cell *matHeaderCellDef mat-sort-header>Час виїзду</th>
+				<td mat-cell *matCellDef="let row"> {{row.outTime}} </td>
 			</ng-container>
 
 			<ng-container matColumnDef="actions">
