--- a/src/app/app.component.scss
+++ b/src/app/app.component.scss
@@ -3,9 +3,9 @@
 }
 
 .container {
-	max-width: 1280px;
-	margin: auto;
-	padding: 20px;
+	max-width: auto;
+	// margin: auto;
+	// padding: 20px;
 }
 
 table {
